force-app/main/default/objects/EnhancedPathConfiguration__mdt/fields/DependentFieldApiNames__c.field-meta.xml
<CustomField>
    <fullName>DependentFieldApiNames__c</fullName>
    <inlineHelpText>A comma separated list of Field API Names that will be treated as Required Dependent Fields for this Picklist Value. This is in addition to any field dependencies already defined at the object level and is primarily intended to be used for fields that typically aren&apos;t able to be considered dependent</inlineHelpText>
    <label>Dependent Field API Names</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>