force-app/main/default/objects/EnhancedPathConfiguration__mdt/fields/GuidanceForSuccess__c.field-meta.xml
<CustomField>
    <fullName>GuidanceForSuccess__c</fullName>
    <inlineHelpText>The content that should be displayed as Guidance for Success for this Picklist Value</inlineHelpText>
    <label>Guidance For Success</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>