force-app/main/default/objects/EnhancedPathConfiguration__mdt/fields/IsGrouped__c.field-meta.xml
<CustomField>
    <fullName>IsGrouped__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If this picklist value should be grouped with others under the value defined on the Enhanced Path LWC properties on the Flexipage, check this box. Intended to serve as a way to group Closed, Converted, etc. type values</inlineHelpText>
    <label>Is Grouped</label>
    <type>Checkbox</type>
</CustomField>