force-app/main/default/objects/EnhancedPathConfiguration__mdt/fields/IsLost__c.field-meta.xml
<CustomField>
    <fullName>IsLost__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If this Picklist Value &quot;Is Grouped&quot; but is considered a &quot;Lost&quot; value, this box should be checked. Controls whether the previous values in the path show as complete and the color of the path value container (red for lost, green for won)</inlineHelpText>
    <label>Is Lost?</label>
    <type>Checkbox</type>
</CustomField>