force-app/main/default/objects/EnhancedPathConfiguration__mdt/fields/KeyFieldApiNames__c.field-meta.xml
<CustomField>
    <fullName>KeyFieldApiNames__c</fullName>
    <inlineHelpText>A comma separated list of Field API Names that should be shown as Key Fields for this Picklist Value</inlineHelpText>
    <label>Key Field API Names</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>