force-app/main/default/objects/EnhancedPathConfiguration__mdt/fields/PicklistApiValue__c.field-meta.xml
<CustomField>
    <fullName>PicklistApiValue__c</fullName>
    <inlineHelpText>The Picklist API Value this Configuration record represents</inlineHelpText>
    <label>Picklist API Value</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>