force-app/main/default/objects/EnhancedPathConfiguration__mdt/fields/RecordTypeApiName__c.field-meta.xml
<CustomField>
    <fullName>RecordTypeApiName__c</fullName>
    <inlineHelpText>The Record Type Developer/API Name this Configuration record is for</inlineHelpText>
    <label>Record Type API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>