force-app/main/default/objects/EnhancedPathConfiguration__mdt/fields/ShowConfetti__c.field-meta.xml
<CustomField>
    <fullName>ShowConfetti__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When a user successfully updates the picklist to this value, should confetti be shown?</inlineHelpText>
    <label>Show Confetti?</label>
    <type>Checkbox</type>
</CustomField>